--- a/src/main/resources/templates/requestsAndNotificatons.html
+++ b/src/main/resources/templates/requestsAndNotificatons.html
@@ -17,6 +17,8 @@
 <!-- Google Fonts-->
 <link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
 	rel="stylesheet" type="text/css" />
+<!-- TABLE STYLES-->
+<link th:href="@{/css/dataTables.bootstrap.css}" rel="stylesheet" />
 </head>
 <body>
 	<div th:include="adminNav :: head-and-side"></div>
@@ -31,72 +33,53 @@
 			</div>
 			<!-- /. ROW  -->
 			<div class="row">
-				<div class="col-sm-12">
-					<div class="panel panel-default">
-						<div class="panel-heading">Requests Panel</div>
+				<div class="col-sm-1"></div>
+				<div class="col-md-10">
+					<div class="panel panel-info">
+						<div class="panel-heading">Requests</div>
 						<div class="panel-body">
-							<div class="panel-group" id="accordion"
-								th:each="request : ${requests}">
-								<div class="panel panel-primary">
-									<div class="panel-heading">
-										<h4 class="panel-title" data-parent="#accordion">
-											<div>
-												<i class="fa fa-fw fa-comment"></i> Requested for bicycles
-											</div>
-										</h4>
-									</div>
-									<div class="panel-body">
-										Manager <span
-											th:text="${request.manager.firstName} + ' ' + ${request.manager.lastName}"></span>
-										(Id=<span th:text="${request.manager.userId}"></span>) have
-										requested for <span th:text="${request.quantity}"></span>
-										Bicycles<br /> For Pickup point : <span
-											th:text="${request.pickUpPoint.location}"></span>(Id=<span
-											th:text="${request.pickUpPoint.pickUpPointId}"></span>)<br />
-										On : <span th:text="${request.requestedOn}"></span>
-									</div>
-									<div th:if="${request.isApproved}" style="float: right;">
-										<span class="btn btn-success">This request has already
-											been approved</span>
-									</div>
-									<div th:unless="${request.isApproved}" style="float: right;">
-										<a href="#"
-											class="w3-btn w3-blue w3-hover-indigo w3-ripple w3-round-xxlarge"
-											role="button">Respond</a>
-
-									</div>
-								</div>
-							</div>
-							<div class="pull-right">
-								<ul class="pagination">
-									<li th:if="${currentIndex} == 1" class="disabled"><a
-										href="#" class="glyphicon glyphicon-fast-backward"></a></li>
-									<li th:if="${currentIndex} == 1" class="disabled"><a
-										href="#" class="glyphicon glyphicon-step-backward"></a></li>
-									<li th:unless="${currentIndex} == 1"><a
-										th:href="@{/admin/requests/?page=1}"
-										class="glyphicon glyphicon-fast-backward"></a></li>
-									<li th:unless="${currentIndex} == 1"><a
-										th:href="@{/admin/requests/?page=} + ${currentIndex - 1}"
-										class="glyphicon glyphicon-step-backward"></a></li>
-									<li th:each="i : ${#numbers.sequence( 1, endIndex/1)}"><a
-										th:href="@{/admin/requests/?page=} + ${i}" th:text="${i}"></a></li>
-									<li th:if="${currentIndex} == ${endIndex}" class="disabled"><a
-										href="#" class="glyphicon glyphicon-step-forward"></a></li>
-									<li th:if="${currentIndex} == ${endIndex}" class="disabled"><a
-										href="#" class="glyphicon glyphicon-fast-forward"></a></li>
-									<li th:unless="${currentIndex} == ${endIndex}"><a
-										th:href="@{/admin/requests/?page=} + ${currentIndex + 1}"
-										class="glyphicon glyphicon-step-forward"></a></li>
-									<li th:unless="${currentIndex} == ${endIndex}"><a
-										th:href="@{/admin/requests/?page=} + ${endIndex}"
-										class="glyphicon glyphicon-fast-forward"></a></li>
-								</ul>
+							<div class="table-responsive">
+								<table class="table table-hover table-striped">
+									<thead>
+										<tr>
+											<th>Id</th>
+											<th>Pick up point</th>
+											<th>Manager</th>
+											<th>Quantity</th>
+											<th>Requested on</th>
+											<th>Respond</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="request : ${requests}">
+											<td th:text="${request.requestId}"></td>
+											<td><span th:text="${request.pickUpPoint.location}"></span><br />(Id=<span
+												th:text="${request.pickUpPoint.pickUpPointId}"></span>)</td>
+											<td class="text-center"><span
+												th:text="${request.manager.firstName} + ${request.manager.lastName}"></span><br />
+												(Id=<span th:text="${request.manager.userId}"></span>)</td>
+											<td class="text-center" th:text="${request.quantity}"></td>
+											<td th:text="${request.requestedOn}"></td>
+											<td sec:authorize="hasAuthority('ADMIN')"><span
+												th:if="${request.isApproved}">Already Approved</span><a
+												th:unless="${request.isApproved}"
+												th:href="@{/admin/respond/} + ${request.requestId}"
+												th:text="${request.location}">Respond</a></td>
+											<td sec:authorize="hasAuthority('MANAGER')"
+												th:if="${request.isResponded}"><span
+												th:if="${request.isResponded}">Already Responded</span></td>
+											<td sec:authorize="hasAuthority('MANAGER')"
+												th:unless="${request.isResponded}"><a
+												th:unless="${request.isResponded}"
+												th:href="@{/manager/respond/} + ${request.requestId}">Respond</a></td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 						</div>
 					</div>
-
 				</div>
+				<div class="col-sm-1"></div>
 			</div>
 		</div>
 	</div>
@@ -107,6 +90,18 @@
 	<script th:src="@{/js/bootstrap.min.js}" type="text/javascript"></script>
 	<!-- Metis Menu Js -->
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
+	<!-- Morris Chart Js -->
+	<script th:src="@{/js/morris/raphael-2.1.0.min.js}"
+		type="text/javascript"></script>
+	<script th:src="@{/js/morris/morris.js}" type="text/javascript"></script>
+	<!-- DATA TABLE SCRIPTS -->
+	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
+	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
+	<script>
+		$(document).ready(function() {
+			$("#dataTables-example").dataTable();
+		});
+	</script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
 </body>
