--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -140,24 +140,27 @@
 								</div>
 								<div sec:authorize="isAuthenticated()"
 									class="slider-caption caption-form">
-									<div class="text-danger" th:text="${errorMessage}"></div>
-										<div style="color: white;" th:text="${message}"></div>
+									<div class="text-danger" id="errorMessage" th:text="${errorMessage}"></div>
+									<div style="color: white;" th:text="${message}"></div>
 									<form action="/user/booking" th:action="@{/user/booking}"
-										class="form-inline" th:object="${userBookingData}" method="POST"
+										class="form-inline" th:object="${userBookingData}"
+										method="POST" onsubmit="return userBookingValidation(this);"
 										style="width: 100%; padding-top: 5px;">
-										<input type="text" name="bookingTime"
-											class="form-control input-md datetimepicker_mask" tabindex="1"
-											placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
+										<input type="text" id="bookingId" name="bookingTime"
+											class="form-control input-md datetimepicker_mask"
+											tabindex="1" placeholder="Booking Date and Time"
+											required="required" /> <select tabindex="2"
 											class="input-md form-control" name="pickUpPoint"
 											required="required">
 											<option value="">Select Pickup Point</option>
 											<option th:each="pickUpPoint : ${pickUpPoints}"
 												th:value="${pickUpPoint.pickUpPointId}"
 												th:text="${pickUpPoint.location}"></option>
-										</select> <input type="text" name="returnTime"
+										</select> <input type="text" name="returnTime" id="returnId"
 											class="form-control input-md datetimepicker_mask"
-											placeholder="Return Date and Time" tabindex="3" required="required" /> <input
-											type="submit" class="btn btn-success btn-md" value="Book Now" />
+											placeholder="Return Date and Time" tabindex="3"
+											required="required" /> <input type="submit"
+											class="btn btn-success btn-md" value="Book Now" />
 									</form>
 								</div>
 							</div>
@@ -177,23 +180,25 @@
 						<div sec:authorize="isAuthenticated()"
 							class="slider-caption caption-form">
 							<div class="text-danger" th:text="${errorMessage}"></div>
-								<div class="text-success" th:text="${message}"></div>
+							<div class="text-success" th:text="${message}"></div>
 							<form action="/user/booking" th:action="@{/user/booking}"
-								class="form-inline" th:object="${userBookingData}" method="POST"
+								class="form-inline" th:object="${userBookingData}"
+								onsubmit="return userBookingValidation(this);" method="POST"
 								style="width: 100%; padding-top: 5px;">
 								<input type="text" name="bookingTime"
 									class="form-control datetimepicker_mask" tabindex="1"
-									placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
-									class="input-xlarge form-control" name="pickUpPoint"
-									required="required">
+									placeholder="Booking Date and Time" required="required" /> <select
+									tabindex="2" class="input-xlarge form-control"
+									name="pickUpPoint" required="required">
 									<option value="">Select Pickup Point</option>
 									<option th:each="pickUpPoint : ${pickUpPoints}"
 										th:value="${pickUpPoint.pickUpPointId}"
 										th:text="${pickUpPoint.location}"></option>
 								</select> <input type="text" name="returnTime"
 									class="form-control datetimepicker_mask"
-									placeholder="Return Date and Time" tabindex="3" required="required"/> <input
-									type="submit" class="btn btn-success" value="Book Now" />
+									placeholder="Return Date and Time" tabindex="3"
+									required="required" /> <input type="submit"
+									class="btn btn-success" value="Book Now" />
 							</form>
 						</div>
 					</div></li>
@@ -213,23 +218,25 @@
 								<div sec:authorize="isAuthenticated()"
 									class="slider-caption caption-form">
 									<div class="text-danger" th:text="${errorMessage}"></div>
-										<div class="text-success" th:text="${message}"></div>
+									<div class="text-success" th:text="${message}"></div>
 									<form action="/user/booking" th:action="@{/user/booking}"
-										class="form-inline" th:object="${userBookingData}" method="POST"
+										class="form-inline" th:object="${userBookingData}"
+										method="POST" onsubmit="userBookingValidation(this);"
 										style="width: 100%; padding-top: 5px;">
 										<input type="text" name="bookingTime"
 											class="form-control datetimepicker_mask" tabindex="1"
-											placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
-											class="input-xlarge form-control" name="pickUpPoint"
-											required="required">
+											placeholder="Booking Date and Time" required="required" /> <select
+											tabindex="2" class="input-xlarge form-control"
+											name="pickUpPoint" required="required">
 											<option value="">Select Pickup Point</option>
 											<option th:each="pickUpPoint : ${pickUpPoints}"
 												th:value="${pickUpPoint.pickUpPointId}"
 												th:text="${pickUpPoint.location}"></option>
 										</select> <input type="text" name="returnTime"
 											class="form-control datetimepicker_mask"
-											placeholder="Return Date and Time" tabindex="3" required="required"/> <input
-											type="submit" class="btn btn-success" value="Book Now" />
+											placeholder="Return Date and Time" tabindex="3"
+											required="required" /> <input type="submit"
+											class="btn btn-success" value="Book Now" />
 									</form>
 								</div>
 							</div>
@@ -251,23 +258,25 @@
 								<div sec:authorize="isAuthenticated()"
 									class="slider-caption caption-form">
 									<div class="text-danger" th:text="${errorMessage}"></div>
-										<div class="text-success" th:text="${message}"></div>
+									<div class="text-success" th:text="${message}"></div>
 									<form action="/user/booking" th:action="@{/user/booking}"
-										class="form-inline" th:object="${userBookingData}" method="POST"
+										class="form-inline" th:object="${userBookingData}"
+										method="POST" onsubmit="userBookingValidation(this);"
 										style="width: 100%; padding-top: 5px;">
 										<input type="text" name="bookingTime"
 											class="form-control datetimepicker_mask" tabindex="1"
-											placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
-											class="input-xlarge form-control" name="pickUpPoint"
-											required="required">
+											placeholder="Booking Date and Time" required="required" /> <select
+											tabindex="2" class="input-xlarge form-control"
+											name="pickUpPoint" required="required">
 											<option value="">Select Pickup Point</option>
 											<option th:each="pickUpPoint : ${pickUpPoints}"
 												th:value="${pickUpPoint.pickUpPointId}"
 												th:text="${pickUpPoint.location}"></option>
 										</select> <input type="text" name="returnTime"
 											class="form-control datetimepicker_mask"
-											placeholder="Return Date and Time" tabindex="3" required="required"/> <input
-											type="submit" class="btn btn-success" value="Book Now" />
+											placeholder="Return Date and Time" tabindex="3"
+											required="required" /> <input type="submit"
+											class="btn btn-success" value="Book Now" />
 									</form>
 								</div>
 							</div>
@@ -289,23 +298,25 @@
 								<div sec:authorize="isAuthenticated()"
 									class="slider-caption caption-form">
 									<div class="text-danger" th:text="${errorMessage}"></div>
-										<div class="text-success" th:text="${message}"></div>
+									<div class="text-success" th:text="${message}"></div>
 									<form action="/user/booking" th:action="@{/user/booking}"
-										class="form-inline" th:object="${userBookingData}" method="POST"
+										class="form-inline" th:object="${userBookingData}"
+										method="POST" onsubmit="userBookingValidation(this);"
 										style="width: 100%; padding-top: 5px;">
 										<input type="text" name="bookingTime"
 											class="form-control datetimepicker_mask" tabindex="1"
-											placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
-											class="input-xlarge form-control" name="pickUpPoint"
-											required="required">
+											placeholder="Booking Date and Time" required="required" /> <select
+											tabindex="2" class="input-xlarge form-control"
+											name="pickUpPoint" required="required">
 											<option value="">Select Pickup Point</option>
 											<option th:each="pickUpPoint : ${pickUpPoints}"
 												th:value="${pickUpPoint.pickUpPointId}"
 												th:text="${pickUpPoint.location}"></option>
 										</select> <input type="text" name="returnTime"
 											class="form-control datetimepicker_mask"
-											placeholder="Return Date and Time" tabindex="3" required="required"/> <input
-											type="submit" class="btn btn-success" value="Book Now" />
+											placeholder="Return Date and Time" tabindex="3"
+											required="required" /> <input type="submit"
+											class="btn btn-success" value="Book Now" />
 									</form>
 								</div>
 							</div>
@@ -327,23 +338,25 @@
 								<div sec:authorize="isAuthenticated()"
 									class="slider-caption caption-form">
 									<div class="text-danger" th:text="${errorMessage}"></div>
-										<div class="text-success" th:text="${message}"></div>
+									<div class="text-success" th:text="${message}"></div>
 									<form action="/user/booking" th:action="@{/user/booking}"
-										class="form-inline" th:object="${userBookingData}" method="POST"
+										class="form-inline" th:object="${userBookingData}"
+										method="POST" onsubmit="userBookingValidation(this);"
 										style="width: 100%; padding-top: 5px;">
 										<input type="text" name="bookingTime"
 											class="form-control datetimepicker_mask" tabindex="1"
-											placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
-											class="input-xlarge form-control" name="pickUpPoint"
-											required="required">
+											placeholder="Booking Date and Time" required="required" /> <select
+											tabindex="2" class="input-xlarge form-control"
+											name="pickUpPoint" required="required">
 											<option value="">Select Pickup Point</option>
 											<option th:each="pickUpPoint : ${pickUpPoints}"
 												th:value="${pickUpPoint.pickUpPointId}"
 												th:text="${pickUpPoint.location}"></option>
 										</select> <input type="text" name="returnTime"
 											class="form-control datetimepicker_mask"
-											placeholder="Return Date and Time" tabindex="3" required="required"/> <input
-											type="submit" class="btn btn-success" value="Book Now" />
+											placeholder="Return Date and Time" tabindex="3"
+											required="required" /> <input type="submit"
+											class="btn btn-success" value="Book Now" />
 									</form>
 								</div>
 							</div>
@@ -365,23 +378,25 @@
 								<div sec:authorize="isAuthenticated()"
 									class="slider-caption caption-form">
 									<div class="text-danger" th:text="${errorMessage}"></div>
-										<div class="text-success" th:text="${message}"></div>
+									<div class="text-success" th:text="${message}"></div>
 									<form action="/user/booking" th:action="@{/user/booking}"
-										class="form-inline" th:object="${userBookingData}" method="POST"
+										class="form-inline" th:object="${userBookingData}"
+										method="POST" onsubmit="userBookingValidation(this);"
 										style="width: 100%; padding-top: 5px;">
 										<input type="text" name="bookingTime"
 											class="form-control datetimepicker_mask" tabindex="1"
-											placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
-											class="input-xlarge form-control" name="pickUpPoint"
-											required="required">
+											placeholder="Booking Date and Time" required="required" /> <select
+											tabindex="2" class="input-xlarge form-control"
+											name="pickUpPoint" required="required">
 											<option value="">Select Pickup Point</option>
 											<option th:each="pickUpPoint : ${pickUpPoints}"
 												th:value="${pickUpPoint.pickUpPointId}"
 												th:text="${pickUpPoint.location}"></option>
 										</select> <input type="text" name="returnTime"
 											class="form-control datetimepicker_mask"
-											placeholder="Return Date and Time" tabindex="3" required="required"/> <input
-											type="submit" class="btn btn-success" value="Book Now" />
+											placeholder="Return Date and Time" tabindex="3"
+											required="required" /> <input type="submit"
+											class="btn btn-success" value="Book Now" />
 									</form>
 								</div>
 							</div>
@@ -440,20 +455,22 @@
 						<hr />
 						<form action="/user/booking" th:action="@{/user/booking}"
 							class="form-inline" th:object="${userBookingData}" method="POST"
+							onsubmit="userBookingValidation(this);"
 							style="width: 100%; padding-top: 5px;">
 							<input type="text" name="bookingTime"
 								class="form-control datetimepicker_mask" tabindex="1"
-								placeholder="Booking Date and Time" required="required"/> <select tabindex="2"
-								class="input-xlarge form-control" name="pickUpPoint"
-								required="required">
+								placeholder="Booking Date and Time" required="required" /> <select
+								tabindex="2" class="input-xlarge form-control"
+								name="pickUpPoint" required="required">
 								<option value="">Select Pickup Point</option>
 								<option th:each="pickUpPoint : ${pickUpPoints}"
 									th:value="${pickUpPoint.pickUpPointId}"
 									th:text="${pickUpPoint.location}"></option>
 							</select> <input type="text" name="returnTime"
 								class="form-control datetimepicker_mask"
-								placeholder="Return Date and Time" tabindex="3" required="required"/> <input
-								type="submit" class="btn btn-success" value="Book Now" />
+								placeholder="Return Date and Time" tabindex="3"
+								required="required" /> <input type="submit"
+								class="btn btn-success" value="Book Now" />
 						</form>
 					</div>
 				</div>
@@ -1026,20 +1043,20 @@
 
 	<!-- Javascript 
 ================================================== -->
-	<script src="js/jquery.js" th:src="@{js/jquery.js}"></script>
-	<script src="js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
-	<script src="js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
-	<script src="js/nivo-lightbox.min.js"
-		th:src="@{js/nivo-lightbox.min.js}"></script>
-	<script src="js/jquery.easing-1.3.js"
-		th:src="@{js/jquery.easing-1.3.js}"></script>
-	<script src="js/plugins.js" th:src="@{js/plugins.js}"></script>
-	<script src="js/owl.carousel.min.js" th:src="@{js/owl.carousel.min.js}"></script>
-	<script src="js/jquery.parallax.js" th:src="@{js/jquery.parallax.js}"></script>
-	<script src="js/wow.min.js" th:src="@{js/wow.min.js}"></script>
-	<script src="js/custom.js" th:src="@{js/custom.js}"></script>
-	<script src="js/jquery.datetimepicker.full.js"
-		th:src="@{js/jquery.datetimepicker.full.js}"></script>
+	<script src="/js/jquery.js" th:src="@{/js/jquery.js}"></script>
+	<script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="/js/smoothscroll.js" th:src="@{/js/smoothscroll.js}"></script>
+	<script src="/js/nivo-lightbox.min.js"
+		th:src="@{/js/nivo-lightbox.min.js}"></script>
+	<script src="/js/jquery.easing-1.3.js"
+		th:src="@{/js/jquery.easing-1.3.js}"></script>
+	<script src="/js/plugins.js" th:src="@{/js/plugins.js}"></script>
+	<script src="/js/owl.carousel.min.js" th:src="@{/js/owl.carousel.min.js}"></script>
+	<script src="/js/jquery.parallax.js" th:src="@{/js/jquery.parallax.js}"></script>
+	<script src="/js/wow.min.js" th:src="@{/js/wow.min.js}"></script>
+	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
+	<script src="/js/jquery.datetimepicker.full.js"
+		th:src="@{/js/jquery.datetimepicker.full.js}"></script>
 	<script>
 		$('.datetimepicker_mask').datetimepicker();
 	</script>
