Added bicycle transfer from manager

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -145,8 +145,7 @@
 							<li><a th:href="@{/manager/transferRequest}">Request for
 									Bicycles</a></li>
 							<li><a th:href="@{/manager/requests}">Other's Requests</a></li>
-							<li><a th:href="@{/manager/transferOrders}">Transfer
-									Orders</a></li>
+							<li><a th:href="@{/manager/transfers}">Transfers</a></li>
 						</ul></li>
 					<li sec:authorize="hasAuthority('ADMIN')"><a
 						th:href="@{/admin/userList}"><i class="fa fa-table "></i>Users</a></li>
