--- a/src/main/resources/templates/requestsAndNotificatons.html
+++ b/src/main/resources/templates/requestsAndNotificatons.html
@@ -64,13 +64,15 @@
 											<td sec:authorize="hasAuthority('ADMIN')"><span
 												th:if="${request.isApproved}">Already Approved</span><a
 												th:unless="${request.isApproved}"
-												th:href="@{/admin/respond/} + ${request.requestId}">Respond</a></td>
+												th:href="@{/admin/respond/} + ${request.requestId}"><button
+														class="btn btn-primary">Respond</button></a></td>
 											<td sec:authorize="hasAuthority('MANAGER')"
 												th:if="${request.isResponded}"><span>Already
 													Responded</span></td>
 											<td sec:authorize="hasAuthority('MANAGER')"
 												th:unless="${request.isResponded}"><a
-												th:href="@{/manager/respond/} + ${request.requestId}">Respond</a></td>
+												th:href="@{/manager/respond/} + ${request.requestId}"><button
+														class="btn btn-primary">Respond</button></a></td>
 										</tr>
 									</tbody>
 								</table>
