--- a/src/main/resources/templates/transferConfirm.html
+++ b/src/main/resources/templates/transferConfirm.html
@@ -26,34 +26,37 @@
 			<div id="page-inner">
 				<div class="row">
 					<div class="col-md-12">
-						<h1 class="page-header">Transfer response</h1>
+						<h1 class="page-header">Transfer request</h1>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-8">
 						<div class="panel panel-info">
 							<div class="panel-heading">
-								<h3>Send Confirmation</h3>
+								<h3>Request details</h3>
 							</div>
 							<div class="panel-body">
-								<div class="col-md-8 col-sm-8 col-xs-8">
-									<form action="#" th:action="@{/manager/sendResponse}"
-										th:object="${responseData}" method="post">
-										<div>
-											<label class="control-label">Request ID</label> <input
-												type="text" name="requestId" th:value="${request.requestId}" class="form-control"
-												required="required" readonly="readonly" />
-										</div>
-										<div>
-											<label class="control-label">Quantity</label> <input
-												type="number" min="5" th:max="${max}" name="quantity"
-												class="form-control" required="required" />
-										</div>
-										<div style="padding: 5px">
-											<input type="submit" value="Send Response"
-												class="btn btn-primary" />
-										</div>
+								<div>
+									<p>
+										The Cycles with the following chasis number is to be shipped
+										to <strong><span
+											th:text="${transfer.transferredTo.location}"></span></strong>.
+									</p>
+									<div class="col-sm-2" th:each="bicycle : ${session.bicycles}">
+										<h4>
+											<span class="label label-info" th:text="${bicycle.chasisNo}"></span>
+										</h4>
+									</div>
+									<br /> <br />
+									<form th:action="@{/manager/confirmShipment}" th:object="${transferData}" method="post">
+										<input type="text" class="form-control" name="vehicleNo"
+											placeholder="Vehicle Number" /><br /> <input type="hidden"
+											name="transferId" th:value="${transfer.transferId}" /> <input
+											type="submit" class="btn btn-primary" /> <a
+											href="/manager/transfers"><button type="button"
+												class="btn btn-default">Cancel</button></a>
 									</form>
+
 								</div>
 							</div>
 						</div>
@@ -78,9 +81,6 @@
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
-	<script src="/js/jquery.js" th:src="@{js/jquery.js}"></script>
-	<script src="/js/bootstrap.min.js" th:src="@{js/bootstrap.min.js}"></script>
-	<script src="/js/smoothscroll.js" th:src="@{js/smoothscroll.js}"></script>
 	<script src="/js/custom.js" th:src="@{/js/custom.js}"></script>
 </body>
 </html>
