Added user booking history to user profile page and some validation related to manager section.

--- a/src/main/resources/templates/transferRequest.html
+++ b/src/main/resources/templates/transferRequest.html
@@ -41,7 +41,7 @@
 										th:object="${transferData}" method="post">
 										<div>
 											<label class="control-label">Quantity</label> <input
-												type="number" min="5" step="5" name="quantity"
+												type="number" min="5" step="5" max="50" title="Enter numbers only" name="quantity"
 												class="form-control" required="required" />
 										</div>
 										<div style="padding: 5px">
