--- a/src/main/resources/templates/booking.html
+++ b/src/main/resources/templates/booking.html
@@ -42,13 +42,14 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
+								<h4 class="text-danger" th:text="*{issueCycleErrorMessage}"></h4>
 									<form action="manager/bookingPayment"
 										th:action="@{/manager/bookingPayment}"
 										th:object="${issueCycleData}" method="GET">
 										<div>
 											<label class="control-label"> UserId</label> <input
 												type="text" name="userId" class="form-control"
-												required="required" />
+												required="required" maxlength="10" />
 										</div>
 										<div>
 											<label class="control-label">Select BiCycle</label> <select
@@ -63,7 +64,7 @@
 										<div>
 											<label class="control-label">Expected Return(In
 												Hours)</label> <input type="number" name="expectedInTime"
-												class="form-control" required="required" max="15" min="1" />
+												class="form-control" max="15" min="1" maxlength="2" required="required"/>
 										</div>
 										<div style="padding: 5px">
 											<button class="btn btn-primary">OK</button>
@@ -83,12 +84,13 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
+								<h4 class="text-danger" th:text="*{errorMessage}"></h4>
 									<form action="manager/printBookingDetails"
 										th:action="@{/manager/printBookingDetails}"
 										th:object="${issueBookingData}" method="POST">
 										<div>
 											<label class="control-label"> Booking Id</label> <input
-												type="text" name="bookingId" class="form-control"
+												type="text" name="bookingId" class="form-control" maxlength="10"
 												required="required" />
 										</div>
 										<div>
@@ -119,13 +121,14 @@
 							</div>
 							<div class="panel-body">
 								<div class="col-md-8 col-sm-8 col-xs-8">
+								<h4 class="text-danger" th:text="*{receiveCycleErrorMessage}"></h4>
 									<form action="manager/receiveCycle"
 										th:action="@{/manager/receiveCycle}"
 										th:object="${receiveCycleData}" method="POST">
 										<div>
 											<label class="control-label">Booking Id</label> <input
 												type="text" name="bookingId" class="form-control"
-												required="required" />
+												required="required" maxlength="10" />
 										</div>
 										<div style="padding: 5px">
 											<input type="submit" class="btn btn-primary" value="OK" /> <input
