--- a/src/main/resources/templates/userBookingHistory.html
+++ b/src/main/resources/templates/userBookingHistory.html
@@ -38,6 +38,8 @@
 <link rel="stylesheet" href="/css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 <link rel="stylesheet" type="text/css" href="/css/profile.css" />
+<!-- TABLE STYLES-->
+<link th:href="@{/css/dataTables.bootstrap.css}" rel="stylesheet" />
 </head>
 
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -75,8 +77,8 @@
 							<li><a
 								th:href="@{/user/userProfile/} + ${#authentication.principal.userId}"
 								style="color: black;"><i class="fa fa-user fa-fw"></i>View
-									Profile<br /> [<small sec:authentication="name">[email]</small>]
-							</a></li>
+									Profile<br /> [<small sec:authentication="name">[email]</small>]</a></li>
+							<li class="divider"></li>
 							<li><a href="/user/changePassword" style="color: black;"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
 							<li class="divider"></li>
@@ -101,30 +103,22 @@
 						<div class="profile-usertitle-name">
 							<span th:text="*{user.firstName}"></span>
 						</div>
-						<div class="profile-usertitle-job" th:text="*{user.role.userRole}">[User_Role]</div>
+						<div class="profile-usertitle-job" th:text="${user.role.userRole}">[User_Role]</div>
 					</div>
 					<!-- END SIDEBAR USER TITLE -->
 					<!-- SIDEBAR MENU -->
 					<div class="profile-usermenu">
 						<ul class="nav">
-							<li sec:authorize="hasAuthority('MANAGER')"><a
-								th:href="@{/manager/managerHome}"><i class="fa fa-home"></i>Home<br />
+							<li><a th:href="@{/user/userProfile/} + ${user.userId}">
+									<i class="glyphicon glyphicon-home"></i> Overview
 							</a></li>
-							<li class="divider"></li>
-							<li sec:authorize="hasAuthority('ADMIN')"><a
-								th:href="@{/admin/adminHome}"><i class="fa fa-home"></i>Home<br />
-							</a></li>
-							<li class="divider"></li>
 							<li class="active"><a href="#"> <i
-									class="glyphicon glyphicon-home"></i> Overview
+									class="fa fa-user fa-fw"></i> Edit Account
 							</a></li>
-							<li><a
-								th:href="@{/user/updateUserDetails/} + ${user.userId}"><i
-									class=" fa fa-user fa-fw"></i>Edit Account</a></li>
 							<li><a href="/user/changePassword"><i
 									class="fa fa-gear fa-fw"></i>Change Password</a></li>
-							<li><a th:href="@{/user/bookingHistory/} + ${user.userId}">
-									<i class="fa fa-history"></i> Booking History
+							<li><a href="#"> <i class="glyphicon glyphicon-flag"></i>
+									Help
 							</a></li>
 						</ul>
 					</div>
@@ -134,75 +128,56 @@
 			<div class="col-md-9">
 				<div class="profile-content">
 					<div class="row">
-						<div class="col-md-2"></div>
-						<div class="col-md-10">
-							<div class="row">
-								<div class="col-md-12">
-									<div class="row">
-										<div class="col-md-4">
-											<label class="text-primary">Name -</label>
-										</div>
-										<div class="col-md-8">
-											<span class="text-info" th:text="*{user.firstName}"></span> <span
-												class="text-info" th:text="*{user.lastName}"></span>
-										</div>
+						<div class="col-sm-12">
+							<!-- Advanced Tables -->
+							<div class="panel panel-info">
+								<div class="panel-heading">Booking Details</div>
+								<div class="panel-body" style="background-color: white;">
+									<div class="table-responsive">
+										<table class="table table-striped table-bordered table-hover"
+											id="dataTables-example">
+											<thead>
+												<tr class="tblFontSize">
+													<th>Booking Id</th>
+													<th>Booking Time</th>
+													<th>Expected In Time</th>
+													<th>Expected Out Time</th>
+												    <th>Actual In Time</th>
+													<th>Actual Out Time</th>
+													<th>Picked Up From</th>
+													<th>Returned At</th>
+													<th>Fare</th>
+													<th>Is Open?</th>
+												</tr>
+											</thead>
+											<tbody class="tblFontSize">
+												<tr th:each="booking : ${bookingHistory}">
+													<td class="text-center" th:text="${booking.bookingId}"></td>
+													<td class="text-center" th:text="${booking.bookingTime}"></td>
+													<td class="text-center" th:text="${booking.expectedIn}"></td>
+													<td class="text-center" th:text="${booking.expectedOut}"></td>
+													<td class="text-center" th:text="${booking.actualIn}"></td>
+													<td class="text-center" th:text="${booking.actualOut}"></td>
+													<td class="text-center" th:text="${booking.pickedUpFrom.location}"></td>
+													<td class="text-center" th:text="${booking.returnedAt.location}"></td>
+													<td class="text-center" th:text="${booking.fare}"></td>
+													<td class="text-center" th:text="${booking.isOpen}"></td>
+												</tr>
+											</tbody>
+										</table>
 									</div>
-									<br />
-									<div class="row">
-										<div class="col-md-4">
-											<label class="text-primary">Address -</label>
-										</div>
-										<div class="col-md-8">
-											<span class="text-info" th:text="*{user.userAddress}"></span>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-md-4">
-											<label class="text-primary">Phone.No -</label>
-										</div>
-										<div class="col-md-8">
-											<span class="text-info" th:text="*{user.mobileNo}"></span>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-md-4">
-											<label class="text-primary">Email -</label>
-										</div>
-										<div class="col-md-8">
-											<span class="text-info" th:text="*{user.email}"></span>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-md-4">
-											<label class="text-primary">Date Of Birth -</label>
-										</div>
-										<div class="col-md-8">
-											<span class="text-info" th:text="*{user.dateOfBirth}"></span>
-										</div>
-									</div>
-									<br />
-									<div class="row">
-										<div class="col-md-4">
-											<label class="text-primary">Valid ID Proof(s) -</label>
-										</div>
-										<div class="col-md-8">
-											<span class="text-primary"
-												th:text="*{user.proofDetail.proofType}"></span> - <span
-												class="text-info" th:text="*{user.proofDetail.proofNo}"></span>
-										</div>
-									</div>
-									<br />
+
 								</div>
 							</div>
+							<!--End Advanced Tables -->
 						</div>
 					</div>
+					<!-- /. ROW  -->
 				</div>
 			</div>
 		</div>
 	</div>
+	<div style="height: 100px;"></div>
 	<div class="footer">
 		<div class="container">
 			<div class="row">
@@ -222,5 +197,13 @@
 	</div>
 	<br />
 	<br />
+	<!-- DATA TABLE SCRIPTS -->
+	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
+	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
+	<script>
+		$(document).ready(function() {
+			$("#dataTables-example").dataTable();
+		});
+	</script>
 </body>
 </html>
