--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -346,57 +346,21 @@
 									<table class="table table-striped table-bordered table-hover">
 										<thead>
 											<tr>
-												<th>Pickup point Id</th>
+												<th>Id</th>
+												<th>Location</th>
 												<th>First Name</th>
 												<th>Last Name</th>
-												<th>User Id</th>
 												<th>Email ID.</th>
 											</tr>
 										</thead>
 										<tbody>
-											<tr>
-												<td>1</td>
-												<td>John</td>
-												<td>Doe</td>
-												<td>John15482</td>
-												<td>name@site.com</td>
+											<tr th:each="pickUpPointManagers : ${pickUpPointManagers}">
+												<td><span th:text="${pickUpPointManagers.pickUpPoint.pickUpPointId}"></span></td>
+												<td><span th:text="${pickUpPointManagers.pickUpPoint.location}"></span></td>
+												<td><span th:text="${pickUpPointManagers.user.firstName}"></span></td>
+											    <td><span th:text="${pickUpPointManagers.user.lastName}"></span></td>
+												<td><span th:text="${pickUpPointManagers.user.email}"></span></td>
 											</tr>
-											<tr>
-												<td>2</td>
-												<td>Kimsila</td>
-												<td>Marriye</td>
-												<td>Kim1425</td>
-												<td>name@site.com</td>
-											</tr>
-											<tr>
-												<td>3</td>
-												<td>Rossye</td>
-												<td>Nermal</td>
-												<td>Rossy1245</td>
-												<td>name@site.com</td>
-											</tr>
-											<tr>
-												<td>4</td>
-												<td>Richard</td>
-												<td>Orieal</td>
-												<td>Rich5685</td>
-												<td>name@site.com</td>
-											</tr>
-											<tr>
-												<td>5</td>
-												<td>Jacob</td>
-												<td>Hielsar</td>
-												<td>Jac4587</td>
-												<td>name@site.com</td>
-											</tr>
-											<tr>
-												<td>6</td>
-												<td>Wrapel</td>
-												<td>Dere</td>
-												<td>Wrap4585</td>
-												<td>name@site.com</td>
-											</tr>
-
 										</tbody>
 									</table>
 								</div>
