Added Booking history to admin and manager home page.

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -81,7 +81,7 @@
 						<!-- Advanced Tables -->
 						<!-- Currently it contains hard-coded data later data will from database -->
 						<div class="panel panel-default">
-							<div class="panel-heading">Today's bookings</div>
+							<div class="panel-heading">Bookings Details</div>
 							<div class="panel-body">
 								<div class="table-responsive">
 									<table class="table table-striped table-bordered table-hover"
@@ -90,206 +90,26 @@
 											<tr>
 												<th>Booking Id</th>
 												<th>User Id</th>
-												<th>User name</th>
+												<th>FirstName</th>
 												<th>Booking time</th>
 												<th>Picked up from</th>
 												<th>Returned at</th>
 												<th>Out time</th>
 												<th>In time</th>
-												<th>Transaction Id</th>
+												<th>BicycleNo</th>
 											</tr>
 										</thead>
 										<tbody>
-											<tr class="odd">
-												<td class="center">bkn34324</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr class="even">
-												<td class="center">bkn34325</td>
-												<td class="center">usr54835</td>
-												<td class="center">B</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp73959</td>
-												<td class="center">pkp67887</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn657567</td>
-											</tr>
-
-											<tr class="odd">
-												<td class="center">bkn34326</td>
-												<td class="center">usr57567</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">8:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr class="even">
-												<td class="center">bkn34327</td>
-												<td class="center">usr56868</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr class="odd">
-												<td class="center">bkn34328</td>
-												<td class="center">usr67878</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn768786</td>
-											</tr>
-
-											<tr class="even">
-												<td class="center">bkn34329</td>
-												<td class="center">usr23534</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp45666</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn565576</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34330</td>
-												<td class="center">usr56858</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34331</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34332</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34333</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34334</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34335</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34336</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34337</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34338</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
-											</tr>
-
-											<tr>
-												<td class="center">bkn34339</td>
-												<td class="center">usr23342</td>
-												<td class="center">A</td>
-												<td class="center">7:00</td>
-												<td class="center">pkp54657</td>
-												<td class="center">pkp78678</td>
-												<td class="center">7:00</td>
-												<td class="center">9:30</td>
-												<td class="center">trn456546</td>
+											<tr class="odd" th:each="booking : ${bookings}">
+												<td class="center"><span th:text="${booking.bookingId}"></span></td>
+												<td class="center"><span th:text="${booking.user.userId}"></span></td>
+												<td class="center"><span th:text="${booking.user.firstName}"></span></td>
+												<td class="center"><span th:text="${booking.bookingTime}"></span></td>
+												<td class="center"><span th:text="${booking.pickedUpFrom.location}"></span></td>
+												<td class="center"><span th:text="${booking.returnedAt.location}"></span></td>
+												<td class="center"><span th:text="${booking.actualOut}"></span></td>
+												<td class="center"><span th:text="${booking.actualIn}"></span></td>
+												<td class="center"><span th:text="${booking.biCycleId.chasisNo}"></span></td>
 											</tr>
 										</tbody>
 									</table>
