--- a/src/main/resources/templates/walletTransaction.html
+++ b/src/main/resources/templates/walletTransaction.html
@@ -203,6 +203,8 @@
 			</div>
 		</div>
 	</div>
+<div style="height: 110px"></div>
+
 	<div class="footer">
 		<div class="container">
 			<div class="row">
@@ -214,14 +216,12 @@
 				<div class="col-md-6"></div>
 				<div class="col-md-3" align="right">
 					<h4>
-						Developed by <a href="/index.html#home">Java Interns</a>
+						Developed by <a href="index.html#home">Java Interns</a>
 					</h4>
 				</div>
 			</div>
 		</div>
 	</div>
-	<br />
-	<br />
 	<!-- DATA TABLE SCRIPTS -->
 	<script th:src="@{/js/jquery.dataTables.js}" type="text/javascript"></script>
 	<script th:src="@{/js/dataTables.bootstrap.js}" type="text/javascript"></script>
