--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -42,12 +42,14 @@
 }
 
 .footer {
-	padding: 20px;
-	height: auto;
+	padding: 50px;
+	height: 100%;
 	background-color: #babdb6;
-	position: fixed;
 	width: 100%;
-	bottom: 0;
+}
+
+.heightDiv{
+	height: 150px;
 }
 
 .tblFontSize{
