--- a/src/main/resources/templates/printIssueBicycleDetails.html
+++ b/src/main/resources/templates/printIssueBicycleDetails.html
@@ -39,7 +39,7 @@
 						<div class="panel-body">
 							<div class="col-sm-12">
 								<div class="col-sm-1"></div>
-								<div class="col-sm-11">
+								<div class="col-sm-11" id ="printId">
 									<div class="row">
 										<div class="col-sm-12">
 											<div class="col-sm-6">
@@ -105,7 +105,7 @@
 						</div>
 						<div class="panel-footer">
 							<div style="padding: 5px" class="text-center">
-								<input type="submit" class="btn btn-primary" value="PRINT" />
+								<input type="submit" class="btn btn-primary" value="PRINT" onclick="print();"/>
 							</div>
 						</div>
 					</div>
@@ -124,5 +124,14 @@
 	<script th:src="@{/js/jquery.metisMenu.js}" type="text/javascript"></script>
 	<!-- Custom Js -->
 	<script th:src="@{/js/custom-scripts.js}" type="text/javascript"></script>
+	<script>  function print(){
+	 var prtContent = document.getElementById("printId");
+	 var WinPrint = window.open('', '', 'left=0,top=0,width=800,height=900,toolbar=0,scrollbars=0,status=0');
+	 WinPrint.document.write(prtContent.innerHTML);
+	 WinPrint.document.close();
+	 WinPrint.focus();
+	 WinPrint.print();
+	 WinPrint.close();}
+	</script>
 </body>
 </html>
