--- a/src/main/resources/templates/printUserBookingDetails.html
+++ b/src/main/resources/templates/printUserBookingDetails.html
@@ -90,7 +90,7 @@
 							<div class="panel panel-info">
 								<div class="panel-heading">Booking details</div>
 								<div class="panel-body" style="background-color: white;">
-									<div class="col-sm-12">
+									<div class="col-sm-12" id="printId">
 										<div class="row">
 											<div class="col-sm-12">
 												<div class="col-sm-6">
@@ -135,7 +135,7 @@
 								</div>
 								<div class="panel-footer">
 									<div style="padding: 5px" class="text-center">
-										<input type="submit" class="btn btn-primary" value="PRINT" />
+										<input type="submit" class="btn btn-primary" value="PRINT" onclick="print();"/>
 									</div>
 								</div>
 							</div>
@@ -170,5 +170,14 @@
 	<script src="/js/jquery.js" th:src="@{/js/jquery.js}"></script>
 	<script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 	<script src="/js/smoothscroll.js" th:src="@{/js/smoothscroll.js}"></script>
+	<script>  function print(){
+	 var prtContent = document.getElementById("printId");
+	 var WinPrint = window.open('', '', 'left=0,top=0,width=800,height=900,toolbar=0,scrollbars=0,status=0');
+	 WinPrint.document.write(prtContent.innerHTML);
+	 WinPrint.document.close();
+	 WinPrint.focus();
+	 WinPrint.print();
+	 WinPrint.close();}
+	</script>
 </body>
 </html>
